--- a/.config/wallust/templates/colors-waybar.css
+++ b/.config/wallust/templates/colors-waybar.css
@@ -1,7 +1,7 @@
 @define-color foreground {{foreground}};
-@define-color background rgba({{background | rgb}},0.25);
-@define-color cursor {{cursor}};
 
+
+@define-color cursor {{cursor}};
 @define-color color0 {{color0}};
 @define-color color1 {{color1}};
 @define-color color2 {{color2}};
@@ -18,3 +18,10 @@
 @define-color color13 {{color13}};
 @define-color color14 {{color14}};
 @define-color color15 {{color15}};
+
+@define-color background rgba({{background | rgb}},0.5);
+
+@define-color infoBG rgba({{ (color15 | darken(0.25)) | rgb }}, .3);
+
+@define-color buttonNonActive {{foreground}};
+@define-color buttonActive {{foreground | darken(0.5)}};
