--- a/.config/waybar/waybarColors.css
+++ b/.config/waybar/waybarColors.css
@@ -1,27 +1,27 @@
-@define-color foreground #FCF7FC;
+@define-color foreground #E5D7B6;
 
 
-@define-color cursor #FCF7FC;
-@define-color color0 #494347;
-@define-color color1 #75417C;
-@define-color color2 #7A437D;
-@define-color color3 #A16C50;
-@define-color color4 #BA5B8D;
-@define-color color5 #BE5D8E;
-@define-color color6 #B9AFB8;
-@define-color color7 #F3ECF2;
-@define-color color8 #AAA5A9;
-@define-color color9 #9C57A5;
-@define-color color10 #A259A7;
-@define-color color11 #D7906B;
-@define-color color12 #F87ABC;
-@define-color color13 #FE7CBE;
-@define-color color14 #F7E9F6;
-@define-color color15 #F3ECF2;
+@define-color cursor #E5D7B6;
+@define-color color0 #454241;
+@define-color color1 #524A46;
+@define-color color2 #775D43;
+@define-color color3 #7A5F43;
+@define-color color4 #7D6244;
+@define-color color5 #998050;
+@define-color color6 #997E42;
+@define-color color7 #D2BD8E;
+@define-color color8 #938463;
+@define-color color9 #5A504A;
+@define-color color10 #8C6946;
+@define-color color11 #906B46;
+@define-color color12 #936F48;
+@define-color color13 #A47926;
+@define-color color14 #B68C2E;
+@define-color color15 #D2BD8E;
 
-@define-color background rgba(34,29,32,0.5);
+@define-color background rgba(26,24,23,0.5);
 
-@define-color infoBG rgba(182,177,182, .3);
+@define-color infoBG rgba(158,142,106, .3);
 
-@define-color buttonNonActive #FCF7FC;
-@define-color buttonActive #7E7C7E;
+@define-color buttonNonActive #E5D7B6;
+@define-color buttonActive #736C5B;
