--- a/.config/waybar/waybarColors.css
+++ b/.config/waybar/waybarColors.css
@@ -1,27 +1,27 @@
-@define-color foreground #DBF8C8;
+@define-color foreground #E5D0DD;
 
 
-@define-color cursor #DBF8C8;
-@define-color color0 #000100;
-@define-color color1 #6B7965;
-@define-color color2 #5391AB;
-@define-color color3 #5493A5;
-@define-color color4 #5E9C86;
-@define-color color5 #70AE50;
-@define-color color6 #72B04A;
-@define-color color7 #C3ECA8;
-@define-color color8 #89A576;
-@define-color color9 #698060;
-@define-color color10 #6EC1E4;
-@define-color color11 #71C4DC;
-@define-color color12 #7ED0B3;
-@define-color color13 #95E76A;
-@define-color color14 #98EA62;
-@define-color color15 #C3ECA8;
+@define-color cursor #E5D0DD;
+@define-color color0 #494251;
+@define-color color1 #745267;
+@define-color color2 #9A4DB1;
+@define-color color3 #778290;
+@define-color color4 #7D8291;
+@define-color color5 #9C7A90;
+@define-color color6 #9E7A90;
+@define-color color7 #D2B4C7;
+@define-color color8 #937E8B;
+@define-color color9 #885A76;
+@define-color color10 #BA54D9;
+@define-color color11 #79899F;
+@define-color color12 #7A829B;
+@define-color color13 #B17A9E;
+@define-color color14 #B67A9F;
+@define-color color15 #D2B4C7;
 
-@define-color background rgba(0,0,0,0.5);
+@define-color background rgba(29,24,35,0.5);
 
-@define-color infoBG rgba(146,177,126, .3);
+@define-color infoBG rgba(158,135,149, .3);
 
-@define-color buttonNonActive #DBF8C8;
-@define-color buttonActive #6E7C64;
+@define-color buttonNonActive #E5D0DD;
+@define-color buttonActive #73686F;
