--- a/.config/waybar/waybarColors.css
+++ b/.config/waybar/waybarColors.css
@@ -1,27 +1,27 @@
-@define-color foreground #DFFEFE;
+@define-color foreground #AEE6EB;
 
 
-@define-color cursor #DFFEFE;
-@define-color color0 #4F4E4C;
-@define-color color1 #58564E;
-@define-color color2 #787562;
-@define-color color3 #807A69;
-@define-color color4 #938F6E;
-@define-color color5 #938E6A;
-@define-color color6 #7ABDBE;
-@define-color color7 #C9F5F6;
-@define-color color8 #8CACAC;
-@define-color color9 #625F55;
-@define-color color10 #8D896F;
-@define-color color11 #938A71;
-@define-color color12 #A49D67;
-@define-color color13 #ACA56C;
-@define-color color14 #A3FCFD;
-@define-color color15 #C9F5F6;
+@define-color cursor #AEE6EB;
+@define-color color0 #37393A;
+@define-color color1 #616B4F;
+@define-color color2 #406F73;
+@define-color color3 #3F7379;
+@define-color color4 #728250;
+@define-color color5 #31878E;
+@define-color color6 #118A95;
+@define-color color7 #83D3DA;
+@define-color color8 #5B9499;
+@define-color color9 #6E7B56;
+@define-color color10 #428086;
+@define-color color11 #41868E;
+@define-color color12 #799144;
+@define-color color13 #1399A5;
+@define-color color14 #17B8C6;
+@define-color color15 #83D3DA;
 
-@define-color background rgba(35,35,33,0.5);
+@define-color background rgba(12,14,15,0.5);
 
-@define-color infoBG rgba(151,184,185, .3);
+@define-color infoBG rgba(98,158,164, .3);
 
-@define-color buttonNonActive #DFFEFE;
-@define-color buttonActive #707F7F;
+@define-color buttonNonActive #AEE6EB;
+@define-color buttonActive #577376;
